--- a/assets/stylesheets/_blog.scss
+++ b/assets/stylesheets/_blog.scss
@@ -2,12 +2,16 @@
   z-index: 10;
   width: 100%;
   max-width: 100%;
-  padding: 7% 10% 7%;
+  padding: 7% 10%;
   padding-top: 30px;
   text-align: center;
   flex: 1;
   background: white;
   border-top: 2px solid #ddd;
+
+  @media (max-width: $mediumWidth) {
+    padding: 5%;
+  }
 
   h2 {
     color: #222;
@@ -20,10 +24,18 @@
   a {
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 2.2em;
+    font-size: 2em;
     font-weight: bold;
     color: #053357;
     text-decoration: none;
+
+    @media (max-width: $mediumWidth) {
+      font-size: 1.5em;
+    }
+
+    @media (max-width: $smallWidth) {
+      font-size: 1.2em;
+    }
 
     &:hover {
       color: darken($headerColor, 15%);
