--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -3,7 +3,7 @@
   padding: 25px 20px;
   font-size: 0.9em;
   color: #ccc;
-  background: #222;
+  background: $linkColor;
   border-top: 1px solid #333;
 
   .contact {
