--- a/assets/stylesheets/_media.scss
+++ b/assets/stylesheets/_media.scss
@@ -24,11 +24,6 @@
   .blog {
     li {
       width: auto;
-      max-width: 500px;
-
-      em {
-        font-size: 0.8em;
-      }
     }
   }
 
